--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<nav>
+		<ul>
+			<li><a href="https://www.freepik.com/photos/nature">Home</a></li>
+			<li><a href="https://www.freepik.com/photos/nature">About us</a></li>
+			<li><a href="https://www.freepik.com/photos/nature">Contact us</a></li>
+		</ul>
+	</nav>
+	<h1>3 random videos</h1>
+	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>
+	Video 1	
+	</video>
+	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>
+		Video 2
+	</video>
+	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls>
+		Video 3
+	</video>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
