--- a/main.html
+++ b/main.html
@@ -15,13 +15,16 @@
 		</ul>
 	</nav>
 	<h1>3 random videos</h1>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>
-	Video 1	
+	<video  controls>
+	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		Video 1	
 	</video>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>
+	<video  controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
 		Video 2
 	</video>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls>
+	<video  controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
 		Video 3
 	</video>
 	<!-- the entire body must be written by student -->
